# sancus-lua-web-example

./: .gitignore  README  autogen.sh  configure.ac
src/: Makefile.am  makefile_gen.in
src/data/: Makefile.am  Makefile.am.sh  run.lua  run.sh.in
src/data/nginx/: nginx-server.conf.in  nginx.conf.in
src/data/static/: index.html
src/lua/: Makefile.am  Makefile.am.sh
src/lua/sancuswebexample/: init.lua
src/lua/sancuswebexample/conf/: common.lua  init.lua
src/lua/sancuswebexample/web/: init.lua
