filesdir = $(pkgdatadir)

nobase_dist_files_DATA = \
	404.html \
	static/apple-touch-icon-precomposed.png \
	static/crossdomain.xml \
	static/css/main.css \
	static/css/normalize.css \
	static/favicon.ico \
	static/img/.gitignore \
	static/index.html \
	static/js/main.js \
	static/js/plugins.js \
	static/js/vendor/jquery-1.10.2.min.js \
	static/js/vendor/modernizr-2.6.2.min.js \
	static/robots.txt
